--- a/PracticaMaD/Model/Model.csproj
+++ b/PracticaMaD/Model/Model.csproj
@@ -73,9 +73,13 @@
     </Compile>
     <Compile Include="CommentDao\CommentDaoEntityFramework.cs" />
     <Compile Include="CommentDao\ICommentDao.cs" />
+    <Compile Include="CommentService\CommentDetails.cs" />
+    <Compile Include="CommentService\CommentService.cs" />
+    <Compile Include="CommentService\ICommentService.cs" />
     <Compile Include="ImageUpload.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="PublicationService\IPublicationService.cs" />
     <Compile Include="Model1.cs">
       <DependentUpon>Model1.tt</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -91,6 +95,8 @@
     </Compile>
     <Compile Include="PublicationDao\PublicationDaoEntityFramework.cs" />
     <Compile Include="PublicationDao\IPublicationDao.cs" />
+    <Compile Include="PublicationService\PublicationDetails.cs" />
+    <Compile Include="PublicationService\PublicationService.cs" />
     <Compile Include="UserProfile.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
