--- a/PracticaMaD/ModelTests/ModelTests.csproj
+++ b/PracticaMaD/ModelTests/ModelTests.csproj
@@ -86,8 +86,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ImageUploadService\ImageUploadServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NinjectXMLTest.cs" />
+    <Compile Include="PublicationService\PublicationServiceTest.cs" />
     <Compile Include="TestManager.cs" />
     <Compile Include="UserProfileTest.cs" />
     <Compile Include="UserService\UserServiceTest.cs" />
