--- a/PracticaMaD/ModelTests/ModelTests.csproj
+++ b/PracticaMaD/ModelTests/ModelTests.csproj
@@ -86,6 +86,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CommentService\CommentServiceTests.cs" />
     <Compile Include="ImageUploadService\ImageUploadServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NinjectXMLTest.cs" />
