--- a/PracticaMaD/Web/Web.csproj
+++ b/PracticaMaD/Web/Web.csproj
@@ -10,8 +10,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Es.Udc.DotNet.MiniPortal.Web</RootNamespace>
-    <AssemblyName>MiniPortal.Web</AssemblyName>
+    <RootNamespace>Es.Udc.DotNet.PracticaMaD.Web</RootNamespace>
+    <AssemblyName>PracticaMaD.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -237,7 +237,7 @@
     <Content Include="Pages\App_LocalResources\MainPage.aspx.resx">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="App_LocalResources\Miniportal.Master.resx">
+    <Content Include="App_LocalResources\PracticaMaD.Master.resx">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Pages\Errors\App_LocalResources\InternalError.aspx.resx">
@@ -267,9 +267,6 @@
     <Content Include="Pages\App_LocalResources\MainPage.aspx.es.resx">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="App_LocalResources\Miniportal.Master.es.resx">
-      <SubType>Designer</SubType>
-    </Content>
     <Content Include="Pages\User\App_LocalResources\Register.aspx.es.resx">
       <SubType>Designer</SubType>
     </Content>
@@ -285,9 +282,6 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Pages\App_LocalResources\MainPage.aspx.gl.resx">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="App_LocalResources\Miniportal.Master.gl.resx">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Pages\User\App_LocalResources\Register.aspx.gl.resx">
