--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -3,6 +3,8 @@
   <configSections>
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      
+      <section name="Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="Es.Udc.DotNet.PracticaMaD.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -41,6 +43,7 @@
 
     <!-- Cultural preferences of the Web site -->
     <globalization culture="auto:en" uiCulture="auto:en-US" />
+	<trace enabled="true" localOnly="true" pageOutput="true" />
     <!--
             Set compilation debug="true" to insert debugging
             symbols into the compiled page. Because this
@@ -154,4 +157,29 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+<applicationSettings>
+        <Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
+                <setting name="PracticaMaD_defaultCount" serializeAs="String">
+                        <value>3</value>
+                </setting>
+                <setting name="ObjectDS_User_Service" serializeAs="String">
+                        <value>Es.Udc.DotNet.PracticaMaD.Model.UserService.IUserService</value>
+                </setting>
+                <setting name="ObjectDS_User_Follows_SelectMethod" serializeAs="String">
+                        <value>ListOfFollows</value>
+                </setting>
+                <setting name="ObjectDS_User_StartIndexParameter" serializeAs="String">
+                        <value>startIndex</value>
+                </setting>
+                <setting name="ObjectDS_User_CountParameter" serializeAs="String">
+                        <value>count</value>
+                </setting>
+                <setting name="ObjectDS_Follows_CountMethod" serializeAs="String">
+                        <value>getNumberOfFollows</value>
+                </setting>
+                <setting name="ObjectDS_User_Dto" serializeAs="String">
+                        <value />
+                </setting>
+        </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
+    </applicationSettings>
 </configuration>
