--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -180,6 +180,12 @@
                 <setting name="ObjectDS_User_Dto" serializeAs="String">
                         <value />
                 </setting>
+                <setting name="ObjectDS_User_Followers_SelectMethod" serializeAs="String">
+                        <value>FollowerList</value>
+                </setting>
+                <setting name="ObjectDS_Followers_CountMethod" serializeAs="String">
+                        <value>getNumberOfFollowers</value>
+                </setting>
         </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
     </applicationSettings>
 </configuration>
