--- a/PracticaMaD/Web/Web.csproj
+++ b/PracticaMaD/Web/Web.csproj
@@ -108,6 +108,7 @@
     <Content Include="Pages\User\Follows.aspx" />
     <Content Include="Pages\User\Perfil.aspx" />
     <Content Include="Pages\User\UpdateUserProfile.aspx" />
+    <Content Include="Pages\User\UploadImage.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -162,6 +163,13 @@
     </Compile>
     <Compile Include="Pages\User\Perfil.aspx.designer.cs">
       <DependentUpon>Perfil.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\User\UploadImage.aspx.cs">
+      <DependentUpon>UploadImage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\User\UploadImage.aspx.designer.cs">
+      <DependentUpon>UploadImage.aspx</DependentUpon>
     </Compile>
     <Compile Include="PracticaMaD.Master.cs">
       <DependentUpon>PracticaMaD.Master</DependentUpon>
