--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -186,6 +186,15 @@
                 <setting name="ObjectDS_Followers_CountMethod" serializeAs="String">
                         <value>getNumberOfFollowers</value>
                 </setting>
+                <setting name="ObjectDS_Image_Service" serializeAs="String">
+                        <value>Es.Udc.DotNet.PracticaMaD.Model.ImageUploadService.IImageUploadService</value>
+                </setting>
+                <setting name="ObjectDS_Image_SelectMethod" serializeAs="String">
+                        <value>recentUploads</value>
+                </setting>
+                <setting name="ObjectDS_Images_CountMethod" serializeAs="String">
+                        <value>getNumberOfImages</value>
+                </setting>
         </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
     </applicationSettings>
 </configuration>
