--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -40,6 +40,7 @@
   </connectionStrings>
 
   <system.web>
+	<httpRuntime maxRequestLength="102400" executionTimeout="3600" />
 
     <!-- Cultural preferences of the Web site -->
     <globalization culture="auto:en" uiCulture="auto:en-US" />
