--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -161,7 +161,7 @@
 <applicationSettings>
         <Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
                 <setting name="PracticaMaD_defaultCount" serializeAs="String">
-                        <value>10</value>
+                        <value>6</value>
                 </setting>
                 <setting name="ObjectDS_User_Service" serializeAs="String">
                         <value>Es.Udc.DotNet.PracticaMaD.Model.UserService.IUserService</value>
@@ -195,6 +195,15 @@
                 </setting>
                 <setting name="ObjectDS_Images_CountMethod" serializeAs="String">
                         <value>getNumberOfImages</value>
+                </setting>
+                <setting name="ObjectDS_Comments_SelectMethod" serializeAs="String">
+                        <value>searchComments</value>
+                </setting>
+                <setting name="ObjectDS_Comments_Service" serializeAs="String">
+                        <value>Es.Udc.DotNet.PracticaMaD.Model.CommentService.ICommentService</value>
+                </setting>
+                <setting name="ObjectDS_Comments_CountMethod" serializeAs="String">
+                        <value>countComments</value>
                 </setting>
         </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
     </applicationSettings>
