--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -44,7 +44,6 @@
 
     <!-- Cultural preferences of the Web site -->
     <globalization culture="auto:en" uiCulture="auto:en-US" />
-	<trace enabled="true" localOnly="true" pageOutput="true" />
     <!--
             Set compilation debug="true" to insert debugging
             symbols into the compiled page. Because this
@@ -203,7 +202,7 @@
                         <value>Es.Udc.DotNet.PracticaMaD.Model.CommentService.ICommentService</value>
                 </setting>
                 <setting name="ObjectDS_Comments_CountMethod" serializeAs="String">
-                        <value>countComments</value>
+                        <value>CountComments</value>
                 </setting>
         </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
     </applicationSettings>
