--- a/PracticaMaD/Web/Web.csproj
+++ b/PracticaMaD/Web/Web.csproj
@@ -108,6 +108,7 @@
     <Content Include="Pages\User\Followers.aspx" />
     <Content Include="Pages\User\Follows.aspx" />
     <Content Include="Pages\User\ImageDetails.aspx" />
+    <Content Include="Pages\User\PerfilCargado.aspx" />
     <Content Include="Pages\User\Perfil.aspx" />
     <Content Include="Pages\User\UpdateUserProfile.aspx" />
     <Content Include="Pages\User\UploadImage.aspx" />
@@ -172,6 +173,13 @@
     </Compile>
     <Compile Include="Pages\User\ImageDetails.aspx.designer.cs">
       <DependentUpon>ImageDetails.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\User\PerfilCargado.aspx.cs">
+      <DependentUpon>PerfilCargado.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\User\PerfilCargado.aspx.designer.cs">
+      <DependentUpon>PerfilCargado.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\User\Perfil.aspx.cs">
       <DependentUpon>Perfil.aspx</DependentUpon>
@@ -303,6 +311,7 @@
     <Content Include="Pages\User\App_LocalResources\Follows.resx" />
     <Content Include="Pages\User\App_LocalResources\Followers.resx" />
     <Content Include="Pages\User\App_LocalResources\CommentDetails.aspx.resx" />
+    <Content Include="Pages\User\App_LocalResources\PerfilCargado.aspx.resx" />
     <EmbeddedResource Include="Pages\User\App_LocalResources\Register.aspx.resx" />
     <Content Include="Pages\User\App_LocalResources\UpdateUserProfile.aspx.resx">
       <SubType>Designer</SubType>
