--- a/PracticaMaD/Web/packages.config
+++ b/PracticaMaD/Web/packages.config
@@ -4,6 +4,7 @@
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net45" />
   <package id="Ninject" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Interception.DynamicProxy" version="3.2.0.0" targetFramework="net45" />
