--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -71,7 +71,7 @@
             "AutoDetect"            ==> Cookies will be used if client browsers
                                         allows it
     -->
-    <sessionState cookieless="UseCookies" timeout="30" />
+    <sessionState cookieless="UseUri" timeout="30" />
     <!-- The <customErrors> section enables configuration of what to do
          if/when an unhandled error occurs during the execution of a request.
 
@@ -151,6 +151,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="Pages/User/TagImages.aspx">
+	  <system.web>
+		  <authorization>
+			  <allow users="*" />
+		  </authorization>
+	  </system.web>
+  </location>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -177,9 +184,6 @@
                 <setting name="ObjectDS_Follows_CountMethod" serializeAs="String">
                         <value>getNumberOfFollows</value>
                 </setting>
-                <setting name="ObjectDS_User_Dto" serializeAs="String">
-                        <value />
-                </setting>
                 <setting name="ObjectDS_User_Followers_SelectMethod" serializeAs="String">
                         <value>FollowerList</value>
                 </setting>
@@ -203,6 +207,21 @@
                 </setting>
                 <setting name="ObjectDS_Comments_CountMethod" serializeAs="String">
                         <value>CountComments</value>
+                </setting>
+                <setting name="ObjectDS_Tag_SelectMethod" serializeAs="String">
+                        <value>findMostUsedTags</value>
+                </setting>
+                <setting name="ObjectDS_Tag_Service" serializeAs="String">
+                        <value>Es.Udc.DotNet.PracticaMaD.Model.TagService.ITagService</value>
+                </setting>
+                <setting name="ObjectDS_Tag_CountMethod" serializeAs="String">
+                        <value>countTags</value>
+                </setting>
+                <setting name="ObjectDS_Tag_Image_SelectMethod" serializeAs="String">
+                        <value>fingImagesByTagId</value>
+                </setting>
+                <setting name="ObjectDS_Tag_Images_CountMethod" serializeAs="String">
+                        <value>countImagesWithTag</value>
                 </setting>
         </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
     </applicationSettings>
