--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -71,7 +71,7 @@
             "AutoDetect"            ==> Cookies will be used if client browsers
                                         allows it
     -->
-    <sessionState cookieless="UseUri" timeout="30" />
+    <sessionState cookieless="AutoDetect" timeout="30" />
     <!-- The <customErrors> section enables configuration of what to do
          if/when an unhandled error occurs during the execution of a request.
 
@@ -222,6 +222,16 @@
                 </setting>
                 <setting name="ObjectDS_Tag_Images_CountMethod" serializeAs="String">
                         <value>countImagesWithTag</value>
+                </setting>
+                <setting name="ObjectDS_Search_keywords_SelectMethod" serializeAs="String">
+                        <value>FindByKeywordAndCategory</value>
+                </setting>
+                <setting name="ObjectDS_Search_Keywords_CountMethod" serializeAs="String">
+                        <value>countSearchKeywords</value>
+                </setting>
+                <setting name="ObjectDS_Search_keywords_without_category_SelectMethod"
+                        serializeAs="String">
+                        <value>FindByKeyword</value>
                 </setting>
         </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
     </applicationSettings>
