Arreglado bug al mostrar tags mas usados

--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -233,6 +233,12 @@
                         serializeAs="String">
                         <value>FindByKeyword</value>
                 </setting>
+                <setting name="ObjectDS_Recent_Image_SelectMethod" serializeAs="String">
+                        <value>findRecentUploads</value>
+                </setting>
+                <setting name="ObjectDS_Recent_Images_CountMethod" serializeAs="String">
+                        <value>countRecentUploads</value>
+                </setting>
         </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
     </applicationSettings>
 </configuration>
