--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -239,6 +239,12 @@
                 <setting name="ObjectDS_Recent_Images_CountMethod" serializeAs="String">
                         <value>countRecentUploads</value>
                 </setting>
+                <setting name="ObjectDS_Image_Tag_SelectMethod" serializeAs="String">
+                        <value>FindImageTags</value>
+                </setting>
+                <setting name="ObjectDS_Image_Tag_CountMethod" serializeAs="String">
+                        <value>CountImageTags</value>
+                </setting>
         </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
     </applicationSettings>
 </configuration>
