--- a/PracticaMaD/Web/Web.csproj
+++ b/PracticaMaD/Web/Web.csproj
@@ -141,6 +141,7 @@
     <Content Include="lib\font-awesome\webfonts\fa-regular-400.svg" />
     <Content Include="lib\font-awesome\webfonts\fa-solid-900.svg" />
     <Content Include="Pages\UserExists.aspx" />
+    <Content Include="Pages\User\EditTags.aspx" />
     <Content Include="Pages\User\EditComment.aspx" />
     <Content Include="Pages\User\AddComment.aspx" />
     <Content Include="Pages\User\CommentDetails.aspx" />
@@ -187,6 +188,13 @@
     <Compile Include="HTTP\View\ApplicationObjects\Countries.cs" />
     <Compile Include="HTTP\View\ApplicationObjects\Languages.cs" />
     <Compile Include="HTTP\View\ApplicationObjects\Locale.cs" />
+    <Compile Include="Pages\User\EditTags.aspx.cs">
+      <DependentUpon>EditTags.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\User\EditTags.aspx.designer.cs">
+      <DependentUpon>EditTags.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\User\EditComment.aspx.cs">
       <DependentUpon>EditComment.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
