--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -71,7 +71,7 @@
             "AutoDetect"            ==> Cookies will be used if client browsers
                                         allows it
     -->
-    <sessionState cookieless="AutoDetect" timeout="30" />
+    <sessionState cookieless="UseCookies" timeout="30" />
     <!-- The <customErrors> section enables configuration of what to do
          if/when an unhandled error occurs during the execution of a request.
 
@@ -158,6 +158,20 @@
 		  </authorization>
 	  </system.web>
   </location>
+	<location path="Pages/User/ImageDetails.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="Pages/User/CommentDetails.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
