--- a/PracticaMaD/Web/Web.csproj
+++ b/PracticaMaD/Web/Web.csproj
@@ -392,6 +392,7 @@
     <Content Include="Pages\User\App_LocalResources\AddComment.aspx.resx" />
     <Content Include="Pages\User\App_LocalResources\EditComment.aspx.resx" />
     <Content Include="Pages\User\App_LocalResources\EditTags.aspx.resx" />
+    <Content Include="Pages\User\App_LocalResources\EditTags.resx" />
     <EmbeddedResource Include="Pages\User\App_LocalResources\Register.aspx.resx" />
     <Content Include="Pages\User\App_LocalResources\UpdateUserProfile.aspx.resx">
       <SubType>Designer</SubType>
