--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -151,6 +151,13 @@
       </authorization>
     </system.web>
   </location>
+	<location path="Pages/User/RenderSearch.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
   <location path="Pages/User/TagImages.aspx">
 	  <system.web>
 		  <authorization>
